<resources>
    <string name="app_name">My Application</string>
    <string name="back_to_zero">C</string>
    <string name="opposite_number">%</string>
    <string name="percent">⇦ </string>
    <string name="devide">÷</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="time">×</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="minus">-</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="plus">+</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
    <string name="line_1">跟你说了横过来不好使，还不翻回去！</string>

</resources>
