<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <TextView
        android:id="@+id/id_monitor_txt"
        android:layout_width="match_parent"
        android:gravity="bottom|right"
        android:textSize="60sp"
        android:layout_height="200dp" />
    
    <GridLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:columnCount="1"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal">
            <Button
                android:id="@+id/id_c_btn"
                android:layout_height="70dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/back_to_zero"
                android:textSize="30sp"/>
            <Button
                android:id="@+id/id_opposite_btn"
                android:layout_height="70dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/opposite_number"
                android:textSize="30sp"/>
            <Button
                android:id="@+id/id_percent_btn"
                android:layout_height="70dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/percent"
                android:textSize="30sp"
                android:textStyle="bold"/>
            <Button
                android:id="@+id/id_devide_btn"
                android:layout_height="70dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/devide"
                android:textSize="30sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal">
            <Button
                android:id="@+id/id_seven_btn"
                android:layout_height="70dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/seven"
                android:textSize="30sp"/>
            <Button
                android:id="@+id/id_eight_btn"
                android:layout_height="70dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/eight"
                android:textSize="30sp"/>
            <Button
                android:id="@+id/id_nine_btn"
                android:layout_height="70dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/nine"
                android:textSize="30sp"/>
            <Button
                android:id="@+id/id_time_btn"
                android:layout_height="70dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/time"
                android:textSize="30sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal">
            <Button
                android:id="@+id/id_four_btn"
                android:layout_height="70dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/four"
                android:textSize="30sp"/>
            <Button
                android:id="@+id/id_five_btn"
                android:layout_height="70dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/five"
                android:textSize="30sp"/>
            <Button
                android:id="@+id/id_six_btn"
                android:layout_height="70dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/six"
                android:textSize="30sp"/>
            <Button
                android:id="@+id/id_minus_btn"
                android:layout_height="70dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/minus"
                android:textSize="30sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/id_one_btn"
                android:layout_height="70dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/one"
                android:textSize="30sp"/>
            <Button
                android:id="@+id/id_two_btn"
                android:layout_height="70dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/two"
                android:textSize="30sp"/>
            <Button
                android:id="@+id/id_three_btn"
                android:layout_height="70dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/three"
                android:textSize="30sp"/>
            <Button
                android:id="@+id/id_add_btn"
                android:layout_height="70dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/plus"
                android:textSize="30sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal">
            <Button
                android:id="@+id/id_zero_btn"
                android:layout_height="70dp"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:text="@string/zero"
                android:textSize="30sp"/>
            <Button
                android:id="@+id/id_dot_btn"
                android:layout_height="70dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/dot"
                android:textSize="30sp"/>
            <Button
                android:id="@+id/id_equal_btn"
                android:layout_height="70dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/equal"
                android:textSize="30sp"/>
        </LinearLayout>
    </GridLayout>
</RelativeLayout>
